still trying to fix spacing

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -43,7 +43,7 @@
 
 @media (max-width: 768px) {
   .master-hero {
-    padding: 4% 0;
+    padding: 4% 0 4% 0;
     font-size: 1.5rem;
   }
 
